loopfor.LoopCourse.scala.error
Erreur de compilation :
LoopCourse:1: error: Missing closing brace `}' assumed here
for (c1 <- 1 to 10){
^